Bug fix: Rating (stars) was overflowing to second line. This shows up on the Ratings and Watchlist screens while hovering for details.

--- a/css/rs.css
+++ b/css/rs.css
@@ -36,12 +36,12 @@
     /* color is in the colors area of this file */
 }
 .rating-star {
-    font-size: 125%;
+    font-size: 110%;
 }
 
-.rating-date {
+ratingDate {
     display:inline-block;
-    min-height: 17px;
+    padding-top: 7px;
 }
 
 .film-line {
